# arol_chatbot

./: .env.docker  .env.example  .gitignore  Dockerfile  PROJECT.md  README.md  chain_test.py  chat_test.py  docker-compose.yml  pyproject.toml  requirements.txt  semantic_routing.ipynb
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: API.js  App.jsx  Chat.css  Chat.jsx  Homepage.jsx  Login.jsx  Register.jsx  index.css
data/: company.json  company_info_cleaned.txt  company_info_cleaned_v2.txt  dataset.csv  full_chain_dataset.csv  json_rewritten.csv  processed_catalog.json
my-react-app/: index.html  package.json
my-react-app/src/: App.js  App.jsx  Chat.css  Chat.js  Chat.jsx  Homepage.css  Homepage.js  Homepage.jsx  SignUp.css  SignUp.jsx  index.css  index.js
src/backend/: main.py  mongo_connection.py  processed_catalog.json  user_collection.py
src/core/: config.py  logger.py
src/doc_loader/: hybrid_loader.py  transform_pipe.py
src/evaluation/: evaluators.py  pipeline.py
src/experiments/: chatbot.py  dataset.py  embedding.py  exp_self_querying.py  full_chain_test.py  retriever_eval.py
src/preprocessing/: cli.py  machine.py  pdf_extraction.py  utilities.py
src/prompt/: pre_builted_prompt.py
src/query_construction/: self_querying.py
src/retriever/: set_merger_retriever.py
src/service/: chatbot_service.py  file_loader_service.py  history_service.py  indexing_serivce.py  langchain_builder_service.py  llm_service.py  retriever_service.py
src/vector_stores/: chroma.py
test/: test_pdf_extraction.py
(+26 files in other folders)
